# teavm-joystick-demo

./: .gitignore  .gitmodules  README.md  README.zh-CN.md  build.gradle  gradle.properties  settings.gradle
core/: build.gradle
core/src/main/java/com/libgdx/joystick/: JoystickDemo.java
desktop-glfw/: README.md  build.gradle  readme-mac(arm64).md  readme-mac(arm64).zh-CN.md  readme-win11(msvc).md  readme-win11(msvc).zh-CN.md  readme-wsl2(ubuntu2404).md  readme-wsl2(ubuntu2404).zh-CN.md
desktop-glfw/native/cmake/: CMakeLists.txt
desktop-glfw/native/runtime-overrides/: fiber.c  uchar.h
desktop-glfw/native/src/freetype/include/: gdx2d_freetype_bridge.h
desktop-glfw/native/src/freetype/src/: gdx2d_freetype_bridge.c
desktop-glfw/src/main/java/com/badlogic/gdx/controllers/: Controllers.java  GlfwController.java  GlfwControllerApi.java  GlfwControllerManager.java  GlfwControllers.java
desktop-glfw/src/main/java/com/badlogic/gdx/graphics/g2d/freetype/: FreeType.java
desktop-glfw/src/main/java/com/libgdx/joystick/glfw/: BuildDesktopGlfwTeaVM.java  GlfwLauncher.java
desktop-lwjgl3/: build.gradle
desktop-lwjgl3/src/main/java/com/libgdx/joystick/lwjgl3/: Lwjgl3Launcher.java
lwjgl3/: build.gradle
lwjgl3/src/main/java/com/libgdx/joystick/lwjgl3/: Lwjgl3Launcher.java
teavm/: build.gradle
teavm/src/main/java/com/libgdx/joystick/web/: TeaVMBuilder.java  TeaVMDesktopLauncher.java  TeaVMLauncher.java  TeaVMPaths.java  TeaVMWebApplication.java
web-teavm/: build.gradle
web-teavm/src/main/java/com/libgdx/joystick/web/: TeaVMBuilder.java  TeaVMDesktopLauncher.java  TeaVMLauncher.java  TeaVMPaths.java  TeaVMWebApplication.java
